--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -28,7 +28,6 @@
                 android:scaleType="center"
                 android:src="@drawable/logo"/>
         </android.support.v7.widget.Toolbar>
-
     </android.support.design.widget.AppBarLayout>
 
 
@@ -44,35 +43,10 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:scrollbarStyle="outsideOverlay"
-            android:paddingTop="16dp"
+            android:paddingTop="@dimen/list_top_margin"
             android:paddingLeft="@dimen/list_side_margin"
             android:paddingRight="@dimen/list_side_margin"
-            android:paddingBottom="16dp" />
+            android:paddingBottom="@dimen/list_bottom_margin" />
     </android.support.v4.widget.SwipeRefreshLayout>
-
-    <!--<FrameLayout-->
-        <!--android:id="@+id/toolbar_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="112dp"-->
-        <!--android:background="?colorPrimary"-->
-        <!--android:elevation="8dp">-->
-
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
-            <!--android:layout_marginLeft="@dimen/list_toolbar_side_margin"-->
-            <!--android:layout_marginRight="@dimen/list_toolbar_side_margin"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?actionBarSize"-->
-            <!--android:layout_gravity="bottom">-->
-
-            <!--<ImageView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:src="@drawable/logo"-->
-                <!--android:contentDescription="@string/app_name" />-->
-
-        <!--</android.support.v7.widget.Toolbar>-->
-    <!--</FrameLayout>-->
 
 </android.support.design.widget.CoordinatorLayout>
