--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -2,10 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="@dimen/card_margin"
+    android:layout_marginRight="@dimen/card_margin"
+    android:layout_marginTop="@dimen/card_margin"
+    android:layout_marginBottom="@dimen/card_margin"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground">
@@ -28,11 +28,11 @@
             style="@android:style/TextAppearance.Material.Subhead"
             android:text="Medium Text"
             android:id="@+id/article_title"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingTop="@dimen/card_text_top_margin"
+            android:paddingLeft="@dimen/card_text_side_margin"
+            android:paddingRight="@dimen/card_text_side_margin"
             android:background="@android:color/background_light"
-            android:gravity="left" />
+            android:gravity="start" />
 
         <TextView
             android:layout_width="match_parent"
@@ -40,12 +40,12 @@
             style="@android:style/TextAppearance.Material.Caption"
             android:text="Medium Text"
             android:id="@+id/article_subtitle"
-            android:paddingTop="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingBottom="8dp"
+            android:paddingTop="@dimen/card_text_between_margin"
+            android:paddingLeft="@dimen/card_text_side_margin"
+            android:paddingRight="@dimen/card_text_side_margin"
+            android:paddingBottom="@dimen/card_text_bottom_margin"
             android:background="@android:color/background_light"
-            android:gravity="left" />
+            android:gravity="start" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
