--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,17 +18,14 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <!--<color name="theme_primary">#04561A</color>-->
-    <!--<color name="theme_primary_dark">#04561A</color>-->
-    <!--<color name="theme_accent">#04561A</color>-->
-    <!--<color name="ltgray">#ffe0e0e0</color>-->
+    <color name="theme_primary">#3F51B5</color>  <!-- 500 -->
+    <color name="theme_primary_dark">#303F9F</color>  <!-- 700 -->
+    <color name="theme_primary_light">#C5CAE9</color> <!-- 100 -->
+    <color name="theme_accent">#FF4081</color>
 
-    <color name="theme_primary">#03A9F4</color>  <!-- 500 -->
-    <color name="theme_primary_dark">#0288D1</color>  <!-- 700 -->
-    <color name="theme_primary_light">#B3E5FC</color> <!-- 100 -->
-    <color name="theme_accent">#FFD740</color>
-
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#727272</color>
+    <color name="white">#FFF</color>
+    <color name="light_grey">#727272</color>
+    <color name="lighter_grey">#8FFF</color>
+    <color name="dark_grey">#212121</color>
 
 </resources>
